force-app/main/default/objects/Account/fields/Casevault_ProID__c.field-meta.xml
<CustomField>
    <fullName>Casevault_ProID__c</fullName>
    <label>Provider ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>