force-app/main/default/objects/Account/fields/Child_Characteristics_Willing_To_Accept__c.field-meta.xml
<CustomField>
    <fullName>Child_Characteristics_Willing_To_Accept__c</fullName>
    <label>Child Characteristics Willing To Accept</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aggression - Cruelty To Animals</fullName>
            </value>
            <value>
                <fullName>Aggression - Physical To Adults</fullName>
            </value>
            <value>
                <fullName>Aggression - Physical To Peers</fullName>
            </value>
            <value>
                <fullName>Aggression - Physical To Staff</fullName>
            </value>
            <value>
                <fullName>Aggression - Property Destruction</fullName>
            </value>
            <value>
                <fullName>Aggression - Verbal To Adults</fullName>
            </value>
            <value>
                <fullName>Aggression - Verbal To Peers</fullName>
            </value>
            <value>
                <fullName>Ambulation Impaired (I.E. Wheelchair Needs)</fullName>
            </value>
            <value>
                <fullName>And/Or Over The Counter Substances (Circle Which)</fullName>
            </value>
            <value>
                <fullName>Anxiety - Obsessions/Compulsions</fullName>
            </value>
            <value>
                <fullName>Anxiety - Overanxious</fullName>
            </value>
            <value>
                <fullName>Anxiety - Panic Attacks</fullName>
            </value>
            <value>
                <fullName>Anxiety - Separation Anxiety</fullName>
            </value>
            <value>
                <fullName>Anxiety - Unrealistic Fears Or Phobias</fullName>
            </value>
            <value>
                <fullName>Anxiety Disorder</fullName>
            </value>
            <value>
                <fullName>Asthma (Controlled)</fullName>
            </value>
            <value>
                <fullName>Asthma (Not Controlled)</fullName>
            </value>
            <value>
                <fullName>Attention Deficit Disorder</fullName>
            </value>
            <value>
                <fullName>Autistic (Self Stimulatory)</fullName>
            </value>
            <value>
                <fullName>Autistic (Self-Injurious)</fullName>
            </value>
            <value>
                <fullName>Auto Theft</fullName>
            </value>
            <value>
                <fullName>Auto Theft- Chronic</fullName>
            </value>
            <value>
                <fullName>Borderline Thru Normal Intelligence (I.Q. = 70+)</fullName>
            </value>
            <value>
                <fullName>Conduct Disorder</fullName>
            </value>
            <value>
                <fullName>Crime Against Person (Assault Or Robbery)</fullName>
            </value>
            <value>
                <fullName>Cult Involvement</fullName>
            </value>
            <value>
                <fullName>Current Lisa L Class</fullName>
            </value>
            <value>
                <fullName>Defiant/Non-Compliant/Oppositional</fullName>
            </value>
            <value>
                <fullName>Depression (By History)</fullName>
            </value>
            <value>
                <fullName>Depression (Current)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>