force-app/main/default/objects/Account/fields/CPA_Home_Id__c.field-meta.xml
<CustomField>
    <fullName>CPA_Home_Id__c</fullName>
    <label>CPA Home Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>