force-app/main/default/objects/Account/fields/CPA_Home_Provider__c.field-meta.xml
<CustomField>
    <fullName>CPA_Home_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPA Home Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Providers</relationshipLabel>
    <relationshipName>Providers</relationshipName>
    <type>Lookup</type>
</CustomField>