force-app/main/default/objects/Account/fields/Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>Date_Updated__c</fullName>
    <label>Date Updated</label>
    <type>Date</type>
</CustomField>