force-app/main/default/objects/Account/fields/Family_s_ability_to_meet_child_s_need__c.field-meta.xml
<CustomField>
    <fullName>Family_s_ability_to_meet_child_s_need__c</fullName>
    <inlineHelpText>4b. Kinship Care Issues (for restrictive or relative placements): Family&apos;s ability to meet child&apos;s needs.</inlineHelpText>
    <label>4b.Family&apos;s ability to meet child&apos;s need</label>
    <length>255</length>
    <type>Text</type>
</CustomField>