force-app/main/default/objects/Account/fields/Family_s_ability_to_resolve_conflict__c.field-meta.xml
<CustomField>
    <fullName>Family_s_ability_to_resolve_conflict__c</fullName>
    <inlineHelpText>2. Family&apos;s ability to resolve conflict.</inlineHelpText>
    <label>2. Family&apos;s ability to resolve conflict</label>
    <length>255</length>
    <type>Text</type>
</CustomField>