force-app/main/default/objects/Account/fields/Family_s_ability_to_work_as_a_team__c.field-meta.xml
<CustomField>
    <fullName>Family_s_ability_to_work_as_a_team__c</fullName>
    <inlineHelpText>3. Family&apos;s ability to work as a team to make decision important to the family (finance, housing empolyment</inlineHelpText>
    <label>3. Family&apos;s ability to work as a team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>