force-app/main/default/objects/Account/fields/family_s_original_foster_care__c.field-meta.xml
<CustomField>
    <fullName>family_s_original_foster_care__c</fullName>
    <inlineHelpText>What was the family&apos;s original motivation to provider foster care or adoption? Expectations?</inlineHelpText>
    <label>family&apos;s_original_foster_care</label>
    <type>TextArea</type>
</CustomField>