force-app/main/default/objects/Account/fields/Fields_Updated__c.field-meta.xml
<CustomField>
    <fullName>Fields_Updated__c</fullName>
    <label>Fields Updated</label>
    <type>Date</type>
</CustomField>