force-app/main/default/objects/Account/fields/Individual_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Individual_First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>