force-app/main/default/objects/Account/fields/Individual_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Individual_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>