force-app/main/default/objects/Account/fields/Individual_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Individual_Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>