force-app/main/default/objects/Account/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>