force-app/main/default/objects/Account/fields/Local_Department__c.field-meta.xml
<CustomField>
    <fullName>Local_Department__c</fullName>
    <label>Local Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baltimore City</fullName>
                <default>true</default>
                <label>Baltimore City</label>
            </value>
            <value>
                <fullName>Harford County</fullName>
            </value>
            <value>
                <fullName>Allegany County</fullName>
            </value>
            <value>
                <fullName>Anne Arundel Co.</fullName>
            </value>
            <value>
                <fullName>Kent County</fullName>
            </value>
            <value>
                <fullName>Baltimore County</fullName>
            </value>
            <value>
                <fullName>Catonsville</fullName>
            </value>
            <value>
                <fullName>Dundalk</fullName>
            </value>
            <value>
                <fullName>Essex</fullName>
            </value>
            <value>
                <fullName>Reisterstown</fullName>
            </value>
            <value>
                <fullName>Montgomery City Dhhs</fullName>
            </value>
            <value>
                <fullName>Calvert County</fullName>
            </value>
            <value>
                <fullName>Prince Georges Co.</fullName>
            </value>
            <value>
                <fullName>Caroline County</fullName>
            </value>
            <value>
                <fullName>Queen Anne&apos;s Co.</fullName>
            </value>
            <value>
                <fullName>Carroll County</fullName>
            </value>
            <value>
                <fullName>St Mary&apos;s County</fullName>
            </value>
            <value>
                <fullName>Cecil County</fullName>
            </value>
            <value>
                <fullName>Somerset County</fullName>
            </value>
            <value>
                <fullName>Charles County</fullName>
            </value>
            <value>
                <fullName>Talbot County</fullName>
            </value>
            <value>
                <fullName>Dorchester Co.</fullName>
            </value>
            <value>
                <fullName>Washington Co.</fullName>
            </value>
            <value>
                <fullName>Frederick County</fullName>
            </value>
            <value>
                <fullName>Wicomico County</fullName>
            </value>
            <value>
                <fullName>Garrett County</fullName>
            </value>
            <value>
                <fullName>Worcester County</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>