force-app/main/default/objects/Account/fields/MD_CHESSIE_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>MD_CHESSIE_Provider_ID__c</fullName>
    <displayFormat>PR{0000}</displayFormat>
    <label>Provider ID</label>
    <type>AutoNumber</type>
</CustomField>