force-app/main/default/objects/Account/fields/Medical_License_No__c.field-meta.xml
<CustomField>
    <fullName>Medical_License_No__c</fullName>
    <label>Medical License No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>