force-app/main/default/objects/Account/fields/Meeting_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Strengths__c</fullName>
    <inlineHelpText>Meeting Children&apos;s Development Needs and Addressing Development Delay</inlineHelpText>
    <label>Meeting Strengths</label>
    <type>TextArea</type>
</CustomField>