force-app/main/default/objects/Account/fields/motivation_PRIDE_process__c.field-meta.xml
<CustomField>
    <fullName>motivation_PRIDE_process__c</fullName>
    <inlineHelpText>How has this motivation changed through the PRIDE process? Expectations?</inlineHelpText>
    <label>motivation_PRIDE_process</label>
    <type>TextArea</type>
</CustomField>