force-app/main/default/objects/Account/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization/Site Name</label>
    <referenceTo>Organization__c</referenceTo>
    <relationshipLabel>Providers</relationshipLabel>
    <relationshipName>Providers</relationshipName>
    <type>Lookup</type>
</CustomField>