force-app/main/default/objects/Account/fields/Organization_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Site_Name__c</fullName>
    <label>Organization/Site Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>