force-app/main/default/objects/Account/fields/Payment_Address__c.field-meta.xml
<CustomField>
    <fullName>Payment_Address__c</fullName>
    <label>Payment Address</label>
    <type>TextArea</type>
</CustomField>