force-app/main/default/objects/Account/fields/Placement_Service__c.field-meta.xml
<CustomField>
    <fullName>Placement_Service__c</fullName>
    <label>Placement Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>