force-app/main/default/objects/Account/fields/Placement_Structure__c.field-meta.xml
<CustomField>
    <fullName>Placement_Structure__c</fullName>
    <label>Placement Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular Foster Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>