force-app/main/default/objects/Account/fields/Protecting_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Protecting_Strengths__c</fullName>
    <inlineHelpText>Protecting and Nuturing Children</inlineHelpText>
    <label>Protecting Strengths</label>
    <type>TextArea</type>
</CustomField>