force-app/main/default/objects/Account/fields/Provider_Status__c.field-meta.xml
<CustomField>
    <fullName>Provider_Status__c</fullName>
    <label>Provider Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>On-hold</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Application Abandoned</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Request to Revoke</fullName>
            </value>
            <value>
                <fullName>Request to Approve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>