force-app/main/default/objects/Account/fields/Reason_For_Closure__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Closure__c</fullName>
    <label>Reason For Closure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Did not complete CAP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Abuse/Neglect</fullName>
            </value>
            <value>
                <fullName>Adopted Child</fullName>
            </value>
            <value>
                <fullName>Change in Family</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Child No Longer in Home</fullName>
            </value>
            <value>
                <fullName>Loss of Child</fullName>
            </value>
            <value>
                <fullName>Disillusionment</fullName>
            </value>
            <value>
                <fullName>Health (Provider)</fullName>
            </value>
            <value>
                <fullName>Health &amp; Safety</fullName>
            </value>
            <value>
                <fullName>Questionable Practices</fullName>
            </value>
            <value>
                <fullName>Foster Parent Retired</fullName>
            </value>
            <value>
                <fullName>Error in Entering</fullName>
            </value>
            <value>
                <fullName>Duplicate entry</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Contract Not Renewed</fullName>
            </value>
            <value>
                <fullName>License Returned</fullName>
            </value>
            <value>
                <fullName>Private Organization Closed</fullName>
            </value>
            <value>
                <fullName>Provider Requested Case Close</fullName>
            </value>
            <value>
                <fullName>Revocation of License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>