force-app/main/default/objects/Account/fields/Referral_ID__c.field-meta.xml
<CustomField>
    <fullName>Referral_ID__c</fullName>
    <label>Referral ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>