force-app/main/default/objects/Account/fields/Send_Payment_To__c.field-meta.xml
<CustomField>
    <fullName>Send_Payment_To__c</fullName>
    <label>Send Payment To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Different Payment Address</fullName>
            </value>
            <value>
                <fullName>The Same Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>