force-app/main/default/objects/Account/fields/Supporting_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Strengths__c</fullName>
    <inlineHelpText>Supporting Relationship between Children and their Familes</inlineHelpText>
    <label>Supporting Strengths</label>
    <type>TextArea</type>
</CustomField>