force-app/main/default/objects/Account/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <type>Time</type>
</CustomField>