force-app/main/default/objects/Account/recordTypes/Private_Provider.recordType-meta.xml
<RecordType>
    <fullName>Private_Provider</fullName>
    <active>true</active>
    <label>Private Provider</label>
</RecordType>