force-app/main/default/objects/Account/recordTypes/Private_Provider_Org.recordType-meta.xml
<RecordType>
    <fullName>Private_Provider_Org</fullName>
    <active>true</active>
    <label>Private Provider Org</label>
</RecordType>