force-app/main/default/objects/Account/recordTypes/Public_Provider.recordType-meta.xml
<RecordType>
    <fullName>Public_Provider</fullName>
    <active>true</active>
    <label>Public Provider</label>
</RecordType>