force-app/main/default/objects/Account/validationRules/Organization_name_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Organization_name_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
 ISPICKVAL( Type__c , &apos;RCC Facility&apos;),ISPICKVAL( Type__c , &apos;Private Organization&apos;), ISPICKVAL( Type__c , &apos;CPA Office&apos;)
) &amp;&amp;
 Organization_Name__c = NULL</errorConditionFormula>
    <errorMessage>Organization name is mandatory for this type</errorMessage>
</ValidationRule>