force-app/main/default/objects/Account/validationRules/Payment_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Address</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Send_Payment_To__c, &apos;The Same Address&apos;) &amp;&amp;  ISCHANGED( Personal_Payment_Address__c )</errorConditionFormula>
    <errorDisplayField>Personal_Payment_Address__c</errorDisplayField>
    <errorMessage>Not allowed to edit payment address field, if send payment to have the same address value.</errorMessage>
</ValidationRule>