force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>Casevault_ProID__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Individual_First_Name__c</columns>
    <columns>Provider_Status__c</columns>
    <columns>Number_of_Beds__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Providers</label>
</ListView>